# ai-sherpa

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ai_sherpa/: __init__.py  __main__.py  registry.py
ai_sherpa/_scaffold/: README.md  __init__.py  main.py  manifest.toml
ai_sherpa/boot/: README.md  __init__.py  main.py  manifest.toml
ai_sherpa/crawler/: README.md  __init__.py  main.py  manifest.toml
ai_sherpa/design/: README.md  __init__.py  component-index.toml  main.py  manifest.toml
ai_sherpa/exit/: README.md  __init__.py  main.py  manifest.toml
ai_sherpa/nextcloud/: README.md  __init__.py  main.py  manifest.toml
ai_sherpa/onboarding/: __init__.py  flow.py  main.py  manifest.toml  validation.py
ai_sherpa/scrum/: README.md  __init__.py  main.py  manifest.toml
tests/: test_dispatcher.py  test_onboarding_e2e.py  test_onboarding_flow.py  test_onboarding_validation.py
tests/fixtures/: raj-sadan-answers.toml
tools/: build_readmes.py  convert_from_raj_sadan.py
