[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sherpa"
version = "0.0.1"
description = "Execution sherpas for AI agents built on ai-constitution"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vishal Raj" }]
keywords = ["ai", "agent", "sherpa", "claude", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.0",
]
onboarding = [
    "questionary>=2.0",
    "ai-constitution>=0.0.1",
]

[project.urls]
Homepage = "https://github.com/vraj0703/ai-sherpa"
Repository = "https://github.com/vraj0703/ai-sherpa"
Issues = "https://linear.app/raj-sadan/project/ai-constitution"

[project.scripts]
ai-sherpa = "ai_sherpa.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_sherpa*"]

[tool.setuptools.package-data]
ai_sherpa = ["**/manifest.toml", "**/*.toml", "**/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
